--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
+    "googleapis": "^49.0.0",
     "grunt": "1.0.4",
     "moment": "^2.24.0",
+    "nodemailer": "^6.4.6",
     "sails": "^1.2.3",
     "sails-hook-grunt": "^4.0.0",
     "sails-hook-orm": "^2.1.1",
